# teleology

./: README.md  deno.json  pyproject.toml
src/sandbox/: run.ts
src/teleology/: mechanism.py
